@@ -1,3 +1,10 @@
+Fri Jan 22 00:25:57 2016  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* regparse.c (fetch_name_with_level): allow non word characters
+	  at the first character.  [Feature #11949]
+
+	* regparse.c (fetch_name): ditto.
+
 Thu Jan 21 17:34:01 2016  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* marshal.c (r_object0): honor Marshal.load post proc
